feat: add basic grid style

--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
         <div class="lesson">
             <div class="lesson__image"></div>
             <p class="lesson__text">Домашняя лаборатория</p>
-            <button class="lesson__button">Перейти</button>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/laboratoria" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Введение. Зачем нужна химия</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 1. Введение. Зачем нужна химия</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/zachem-nuzhna-himiya" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Белки, жиры, углеводы — основа жизни</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 2. Белки, жиры, углеводы — основа жизни</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/belki-zhiry-uglevody" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Вода и минеральные вещества</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 3. Вода и минеральные вещества</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/mineralnye-veshchestva" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Кислоты и щелочи</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 4. Кислоты и щелочи</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/kisloty-i-shchelochi" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Витамины</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 5. Витамины</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/vitaminy" class="lesson__link">Перейти</a></button>
         </div>
         <div class="lesson">
             <div class="lesson__image"></div>
-            <p class="lesson__text">Лекарства</p>
-            <button class="lesson__button">Перейти</button>
+            <p class="lesson__text">Урок 6. Лекарства</p>
+            <button class="lesson__button"><a href="https://chemistry.lektorium.tv/lekarstva" class="lesson__link">Перейти</a></button>
         </div>
     </section>
     <section class="section"></section>
